--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <img src="./assets/images/birthday-invite.png" height="200">
     <hr>
-    <a href="./about.html">About Me </a>
-    <a href="./contact.html"> Contact Me </a>
+    <a href="./public/about.html">About Me </a>
+    <a href="./public/contact.html"> Contact Me </a>
 </body>
 </html>
