--- a/index.html
+++ b/index.html
@@ -5,17 +5,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Rick Warden Resume</title>
 </head>
 <body>
-    <h1> Angela's Portfolio</h1>
-    <h2> I'm a Web Developer</h2>
+    <h1>Rick Warden</h1>
+    <h2>Web Developer</h2>
+    <img src="./assets/images/IMG_5173.JPG" width="200">
     <hr>
-    <img src="./assets/images/movie-ranking.png" height="200">
-    <br>
-    <img src="./assets/images/birthday-invite.png" height="200">
+    <h2>Summary</h2>
+    I am a hardworking and dedicated individual with experience in management and negotiation
     <hr>
-    <a href="./public/about.html">About Me </a>
-    <a href="./public/contact.html"> Contact Me </a>
+    <h2>Education</h2>
+    <ul>
+        <li><b>Bachelor of Arts</b> University of western Australia, 2001</li>
+        <li><b>Diploma of Web Design</b> Univeristy of Technology, Sydney, 2004</li>
+    </ul>
+    <hr>
+    <h2>Work Experience</h2>
+   
+    <p>Angel Investment Manager, Smart Money Crypto<br>
+    Research and assess potential clients, establish communications and negotiate investment terms on behalf of a large group of investors</p>
+    <p>
+        Union Delegate, Otis Elevators<br>
+        Represent 100-150 workers and present a strong and fair voice to management. Negotiation and authoring of workplace agreements, direct representation on an individual level and counselling and advisory for members. 
+    </p>    
+    <hr>
+    <h2>Skills</h2>
+    Organisational skillse: ⭐️⭐️⭐️⭐️⭐️<br>
+    Team Management: ⭐️⭐️⭐️<br>
+    Research and discovery: ⭐️⭐️⭐️⭐️<br>
+    <hr>
+    <h2>Awards and Certifications</h2>
+    Employee of the Month - ABC Inc. (August 2016)
+    <hr>
+    <h2>Other</h2>
+    <h3>My Hobbies</h3>
+    <ul>
+        <li>Devoted to a pusruit of self-improvement in health, well-being, physical skills and academic knowledge</li>
+        <li>Keen interest in blockchainan crypto-currency, originally as an investor but increasingly as an active participant in development</li>
+        <li>Outdoors activities - hiking, surfing, rock-climbing. Any activity that can push my boundaries and expand my horizons</li>
+        <li> Dedicated father, driven to expose my two young kids to all the learning experiences we can fit into a weekend!</li>
+    </ul>
+    <hr>
+    <h3>Contact Me  </h3>
+    <a href="./public/contact.html">Contact Details</a>
+<br>
+<br>
+<br>
+<br>
+
+    <footer>
+        <small>© Jane Doe. All rights reserved.</small>
+    </footer>
+    
 </body>
 </html>
