--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,25 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Details</title>
+</head>
+<body>
+    <h2>Rick Warden</h2>
+    <h3>Web Developer</h3>
+    <h3></h3>Email:</h3>
+    <h3></h3>Twitter:</h3>
+    <h3></h3>Discord:</h3>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+    <footer>
+        <small>© Jane Doe. All rights reserved.</small>
+    </footer>
+</body>
+</html>
